--- a/echelle.html
+++ b/echelle.html
@@ -17,8 +17,7 @@
     let data, 
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "data/fr-en-evaluations_nationales_6eme_region.csv",
-        width = 600, height=600, widthLibTxt=120, svg, marginTop = 30, marginBottom = 100, 
-        //pVal='cpx',pLib='dim',pFreq='nbCpx',
+        width = 600, height=600, widthLibTxt=120, svg,  
         valX='Score moyen',valDim='Matière',valY='Ecart type',
         bandY,
         interpolates = false;
