--- a/echelle.html
+++ b/echelle.html
@@ -18,7 +18,7 @@
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "data/fr-en-evaluations_nationales_6eme_region.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='Score moyen',valDim='Matière',valY='Ecart type',
+        valX='Score moyen',valGroupe='Matière',valY='Ecart type',
         bandY,
         interpolates = false;
         /*{
@@ -39,7 +39,7 @@
     })
 
     function setData(rs){
-        data = Array.from(d3.group(rs, d => d[valDim]));
+        data = Array.from(d3.group(rs, d => d[valGroupe]));
         //création de l'échelle par bandes
         //cf. https://observablehq.com/@d3/d3-scaleband
         bandY = d3.scaleBand(data.map(d=>d[0]), [0, height]).paddingInner(0.2).paddingOuter(0.2);
@@ -55,7 +55,7 @@
                         'scX':d3.scaleLinear().domain(extX).range([widthLibTxt, width-widthLibTxt]),
                         'scY':d3.scaleLinear().domain(extY).range([0, bandY.bandwidth()])
                         };
-                        o[valDim]=d[0];
+                        o[valGroupe]=d[0];
                     return o;
                 });
         return data;
@@ -80,9 +80,9 @@
                 .attr("style", "max-width: 100%; height: auto;")
                 .style("font", "14px sans-serif"),
             dim = svg.selectAll('g').data(data).enter().append("g")
-                .attr("transform",(d,i)=>`translate(0,${bandY(d[valDim])})`);
+                .attr("transform",(d,i)=>`translate(0,${bandY(d[valGroupe])})`);
             dim.append("text").text(d=>{
-                return d[valDim]
+                return d[valGroupe]
             })
             dim.append("g").attr("transform", (d,i)=>`translate(widthLibTxt,0)`).attr('id',(d,i)=>'axisX'+i)
                 .each((d,i)=>{
