--- a/echelle.html
+++ b/echelle.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
     import {posiColor} from './modules/posiColor.js';
 
     let data, 
-        //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
+        //urlData = "https://github.com/belmalika/echelles/edit/main/synthese-fra.csv",
         urlData = "data/fr-en-evaluations_nationales_6eme_region.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
         valX='Score moyen',valGroupe='Matière',valY='Ecart type',
